Stop horizontal scrollbar

--- a/style.css
+++ b/style.css
@@ -6,7 +6,19 @@
 
 body {
   font-family: Verdana, Geneva, sans-serif;
-  margin: 0; /* get eid of spacing around webpage */
+  margin: 0; /* get rid of spacing around webpage */
+  max-width: 100%;
+}
+
+body {
+  overflow-x: hidden;
+}
+.hidden-thing {
+  position: absolute;
+  left: 100%;
+  width: 50px;
+  height: 50px;
+  opacity: 0;
 }
 
 .fixedtopbar
@@ -14,7 +26,7 @@ body {
     position: fixed;
     width: 100%;
     background-color: mediumaquamarine;
-    height: px;
+    max-height: 100%
 }
 
 main {
